fixed text size on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -312,6 +312,10 @@ tbody,
 }
 
 @media only screen and (max-width: 500px) {
+    p {
+        font-size: .9rem;
+    }
+
     .container {
         width: 100%;
     }
@@ -322,7 +326,7 @@ tbody,
     }
 
     .tabs ul li {
-        font-size: .8rem;
+        font-size: .9rem;
     }
 
     .recall-title {
